--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -28,3 +28,12 @@ div.card{
     margin-bottom: 2%;
     text-align: left;
 }
+.card-header {
+    position: relative;
+}
+#poster-username{
+    display: block;
+    position: absolute;
+    bottom:0;
+    left: 0;
+}
