changed some icons and naming

--- a/frontend/css/add_post.css
+++ b/frontend/css/add_post.css
@@ -34,6 +34,11 @@ form
     display: hidden;
 }
 
+#logged-in-user{
+    margin-right:3%;
+    margin-top:10%;
+    }
+
 #img-submit{
     margin-top:5%;
     margin-bottom:5%;
