add great user pages and changed localization

--- a/frontend/css/add_post.css
+++ b/frontend/css/add_post.css
@@ -43,3 +43,8 @@ form
     margin-top:5%;
     margin-bottom:5%;
 }
+
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+}
