--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -12,7 +12,7 @@ form
     margin-top: 5%;
     text-align: left;
 }
-#login-error{
+#login-error{   
     width: 100%;
 }
 div.card{
@@ -20,7 +20,6 @@ div.card{
     text-align: center;
 }
 .card {
-    width: 25%;
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
@@ -50,7 +49,27 @@ margin-top:10%;
    height:10px;
 }
 
+.bg-light{
+    background-color: rgba(240,240,240,var(--mdb-bg-opacity))!important
+}
+
+html {
+    background-color: rgba(249,249,249,var(--mdb-bg-opacity))!important
+}
+
 a, a:hover, a:focus, a:active {
     text-decoration: none;
     color: inherit;
+}
+
+.card-img-top{
+    border-top-left-radius: calc(0.5rem - 1px);
+    border-top-right-radius: calc(0.5rem - 1px);
+    border-bottom-left-radius: calc(0.5rem - 1px);
+    border-bottom-right-radius: calc(0.5rem - 1px);
+}
+
+.col {
+    float:left;
+    width:33%;
 }
