--- a/frontend/css/user_profile.css
+++ b/frontend/css/user_profile.css
@@ -1,3 +1,77 @@
+
+
 #sub_button{
     width: 12%;
 }
+
+#wrapper {
+    display: flex;
+  }
+  
+  #left {
+    flex: 0 0 65%;
+  }
+  
+  #right {
+    flex: 1;
+  }
+
+  #membership-info {
+      width:70%;
+  }
+
+  #tier-name {
+    font-family: var(--mdb-font-roboto);
+    line-height: 1.6;
+    color: #4f4f4f;
+  }
+
+  #membership-tiers {
+    font-family: var(--mdb-font-roboto);
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: #4f4f4f;
+    padding:0;
+  }
+
+  .list-group-item:first-child {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+  .tier {
+    border-top: 1px solid rgba(0,0,0,.125) !important;
+    border: none;
+    width: 100%;
+  }
+
+  #tier-img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    border-top-left-radius: calc(0.5rem - 1px);
+    border-top-right-radius: calc(0.5rem - 1px);
+    border-bottom-left-radius: calc(0.5rem - 1px);
+    border-bottom-right-radius: calc(0.5rem - 1px);
+  }
+
+
+  .card-text {
+    font-weight: 350;
+    font-size: 1rem;
+  }
+
+  h5 {
+    margin:0;
+  }
+
+  h6 {
+    font-size: 0.9rem;
+    margin:0;
+  }
+
+  .list-group-item:last-child {
+    border-bottom:none;
+    border-bottom-left-radius: calc(0.5rem - 1px);
+    border-bottom-right-radius: calc(0.5rem - 1px);
+  }
