--- a/frontend/css/user_profile.css
+++ b/frontend/css/user_profile.css
@@ -75,3 +75,10 @@
     border-bottom-left-radius: calc(0.5rem - 1px);
     border-bottom-right-radius: calc(0.5rem - 1px);
   }
+
+  #locked-post {
+    padding-top: 5px;
+    padding-left: 5px;
+    width:20px;
+    height: 20px;
+}
