basic tier select frontend added

--- a/frontend/css/add_post.css
+++ b/frontend/css/add_post.css
@@ -52,3 +52,13 @@ a, a:hover, a:focus, a:active {
 div.form {
     background-color: rgba(249,249,249,var(--mdb-bg-opacity))!important
 }
+
+#select-div {
+    top: 800px;
+   background-color: green;
+}
+
+#ms-tier-select {
+    padding-top:3%;
+    padding-bottom:5%;
+}
