--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,5 +1,6 @@
 div.form
 {
+    background-color: rgba(249,249,249,var(--mdb-bg-opacity))!important;
     display: block;
     text-align: center;
 }
@@ -54,6 +55,10 @@ margin-top:10%;
 }
 
 html {
+    background-color: rgba(249,249,249,var(--mdb-bg-opacity))!important
+}
+
+body {
     background-color: rgba(249,249,249,var(--mdb-bg-opacity))!important
 }
 
