add shop showcase to profile

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -50,6 +50,10 @@ margin-top:10%;
    height:10px;
 }
 
+h5 {
+    margin:0;
+  }
+
 .bg-light{
     background-color: rgba(240,240,240,var(--mdb-bg-opacity))!important
 }
