--- a/frontend/css/user_shop.css
+++ b/frontend/css/user_shop.css
@@ -18,6 +18,11 @@ a:active {
   color: inherit;
 }
 
+#logged-in-user{
+  margin-right:3%;
+  margin-top:10%;
+  }
+
 
 .card-img-top {
   border-top-left-radius: calc(0.5rem - 1px);
@@ -39,6 +44,7 @@ a:active {
 
 .card  {
   height: 100%;
+  text-align: center;
 }
 
 .body {
@@ -49,6 +55,16 @@ a:active {
   background-color: rgba(249, 249, 249, var(--mdb-bg-opacity)) !important;
 }
 
+#shop-title {
+  text-align: center;
+  margin-bottom:4%;
+  margin-top:4%;
+}
+
+
+h5 {
+  margin:0;
+}
 
 #column {
   box-sizing: border-box;
