--- a/frontend/css/user_profile.css
+++ b/frontend/css/user_profile.css
@@ -59,6 +59,7 @@
   .card-text {
     font-weight: 350;
     font-size: 1rem;
+    white-space: pre-line;
   }
 
   h5 {
@@ -94,6 +95,15 @@
 
 #shop-info {
   width: 70%;
+}
+
+#delete-img{
+  height: 20px;
+  width:20px;
+}
+
+#no-posts{
+  text-align: center;
 }
 
 #shop-showcase {
