--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -70,6 +70,7 @@ margin-top:10%;
    height:10px;
 }
 
+
 h5 {
     margin:0;
   }
@@ -124,4 +125,8 @@ input {
 
 textarea{
     background-color: white  !important;
+}
+
+.disabled-field {
+    background-color: #e9ecef!important;
 }
